<resources>
    <string name="app_name">DataCollection(MAVI)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="prompt_ipaddress">Server IP Address</string>
    <string name="server_ipaddress">"192.168.43.232:8000"</string>
    <string name="push_to_server">"push to Server"</string>
    <string name="login">/mavi/api/obtain-token/</string>


    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="save_button_text">Save Form</string>
    <string name="delete_button_text">Delete</string>
    <string name="reset_button_text">Reset Form</string>
    <string name="ok_button_text">Okay</string>
    <string name="pick_place_button_text">Pick A Place</string>
    <string name="title_activity_data_collect">DataCollection</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete all stored data</string>
    <string name="logout">Logout</string>

    <string name="form_tittle">Form</string>
    <string name="stored_data_tittle">Stored Data</string>
    <string name="text_on_image_button">Click to add image"</string>

    <string name="name_error">Give a namestring</string>
    <string name="angle_error">Angle is Mising</string>
    <string name="place_error">Choose a place</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
</resources>
