<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="datacollection.iitd.mavi.datacollectionmavi.Fragment.PopUpDialogFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/signboard_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop"
            android:contentDescription="SignBoard Image" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textSize="30dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvnbv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textSize="30dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvmb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment"
            android:textSize="30dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/delete_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_button_text"
                android:textStyle="bold"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/Ok_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_button_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginBottom="0dp"
                />





        </LinearLayout>



    </LinearLayout>





</FrameLayout>
