<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="SignBoard name"
                android:ems="10"
                android:id="@+id/signboard_name" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Align your moblie | to SignBoard"
                android:ems="10"
                android:id="@+id/signboard_direction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <Button
                    android:id="@+id/place_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_place_button_text"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/data_container"
                    android:orientation="vertical">

                    <include layout="@layout/signboard_data_blocks">

                    </include>
                </LinearLayout>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/add_more_button"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="Add More"
                    android:layout_gravity="center_horizontal"

                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Button
                android:id="@+id/reset_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_button_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginBottom="0dp"
                />

            <Button
                android:id="@+id/save_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:textStyle="bold"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                />



        </LinearLayout>




    </LinearLayout>


</android.support.v4.widget.NestedScrollView>